test_yuriiq/catalog/language/english/english.php
<?php

// time
$_['time_format']	= 'h:i:s A';

// text
$_['text_select']	= ' --- Please Select --- ';
$_['text_yes']	= 'Yes';
$_['text_pagination']	= 'Showing {start} to {end} of {total} ({pages} Pages)';
$_['text_none']	= ' --- None --- ';
$_['text_all_zones']	= 'All Zones';
$_['text_separator']	= ' &raquo; ';
$_['text_home']	= '<i class="fa fa-home"></i>Home';
$_['text_no']	= 'No';

// error
$_['error_upload_999']	= 'Warning: No error code available!';
$_['error_upload_7']	= 'Warning: Failed to write file to disk!';
$_['error_upload_8']	= 'Warning: File upload stopped by extension!';
$_['error_upload_6']	= 'Warning: Missing a temporary folder!';
$_['error_upload_4']	= 'Warning: No file was uploaded!';
$_['error_upload_3']	= 'Warning: The uploaded file was only partially uploaded!';
$_['error_upload_2']	= 'Warning: The uploaded file exceeds the MAX_FILE_SIZE directive that was specified in the HTML form!';
$_['error_upload_1']	= 'Warning: The uploaded file exceeds the upload_max_filesize directive in php.ini!';

// button
$_['button_download']	= 'Download';
$_['button_update']	= 'Update';
$_['button_print']	= 'Print';
$_['button_quote']	= 'Get Quotes';
$_['button_guest']	= 'Guest Checkout';
$_['button_delete']	= 'Delete';
$_['button_checkout']	= 'Checkout';
$_['button_compare']	= 'Compare';
$_['button_shopping']	= 'Continue Shopping';
$_['button_back']	= 'Back';
$_['button_wishlist']	= 'Wish List';
$_['button_search']	= 'Search';
$_['button_upload']	= 'Upload File';
$_['button_return']	= 'Return';
$_['button_cart']	= 'Cart';
$_['button_coupon']	= 'Apply Coupon';
$_['button_voucher']	= 'Apply Voucher';
$_['button_reviews']	= 'Reviews';
$_['button_reward']	= 'Apply Points';
$_['button_shipping']	= 'Apply Shipping';
$_['button_confirm']	= 'Confirm Order';
$_['button_continue']	= 'Continue';
$_['button_change_address']	= 'Change Address';
$_['button_view']	= 'View';
$_['button_write']	= 'Write Review';
$_['button_login']	= 'Login';
$_['button_edit']	= 'Edit';
$_['button_remove']	= 'Remove';
$_['button_reorder']	= 'Reorder';
$_['button_filter']	= 'Refine Search';
$_['button_add_address']	= 'Add Address';
$_['button_new_address']	= 'New Address';

// direction
$_['direction']	= 'ltr';

// code
$_['code']	= 'en';

// thousand
$_['thousand_point']	= ',';

// date
$_['date_format_short']	= 'D / M / Y';
$_['date_format_long']	= 'l dS F Y';

// decimal
$_['decimal_point']	= '.';
?>